# site-context-pipeline

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_NOTES_v0.1.0.md  bootstrap-github.ps1  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  provider_adapter.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  release-drafter.yml  release.yml
docs/: architecture.md  artifacts.md  citation.md  classifier.md  comparison.md  demo-clients.md  index.md  provider-reference.md  providers.md  qa.md  recipes.md  schemas.md  tutorial.md
examples/demo-client/config/: classifier.json  commercial_urls.json
examples/demo-client/input/: keyword_metrics.csv  links.csv  project.md  search_console.csv  search_evidence.csv  urls.csv
examples/demo-client/output/: .gitkeep
examples/demo-ecommerce/config/: classifier.json  commercial_urls.json
examples/demo-ecommerce/input/: keyword_metrics.csv  links.csv  project.md  search_console.csv  search_evidence.csv  urls.csv
examples/demo-multilingual/config/: classifier.json  commercial_urls.json
examples/demo-multilingual/input/: keyword_metrics.csv  links.csv  project.md  search_console.csv  search_evidence.csv  urls.csv
scripts/: perf_benchmark.py
src/site_context_pipeline/: __init__.py  __main__.py  cli.py  clients.py  context_pack.py  inventory.py  link_graph.py  markdown.py  qa.py  schemas.py
src/site_context_pipeline/importers/: __init__.py  screaming_frog.py  sitemap_xml.py
src/site_context_pipeline/json_schema/: __init__.py  agent_context_pack.schema.json  content_inventory.schema.json  internal_link_graph.schema.json  keyword_metrics.schema.json  search_evidence.schema.json  search_performance.schema.json
src/site_context_pipeline/providers/: __init__.py  base.py  google_ads_keyword_planner.py  google_search_console.py  local_keyword_csv.py  local_search_console_csv.py  local_search_evidence_csv.py  registry.py
tests/: conftest.py  test_classifier_rules.py  test_cli.py  test_context_pack.py  test_context_pack_evidence.py  test_context_pack_providers.py  test_coverage_edge_cases.py  test_demo_ecommerce.py  test_demo_multilingual.py  test_google_ads_adapter.py  test_gsc_adapter.py  test_inventory.py  test_inventory_screaming_frog.py  test_inventory_sitemap.py  test_json_schemas.py  test_perf_benchmark.py  test_property_based.py  test_provider_cli.py  test_providers.py  test_qa.py  test_qa_cli.py  test_screaming_frog_importer.py  test_search_evidence_provider.py  test_sitemap_importer.py
tests/fixtures/: sitemap_index.xml  sitemap_index_part_a.xml  sitemap_index_part_b.xml  sitemap_malformed.xml  sitemap_no_namespace.xml  sitemap_simple.xml
tests/fixtures/qa/: green_draft.md  orange_short_intro.md  red_anchor_equals_keyphrase.md  red_heading_jump.md  red_keyphrase_density_too_low.md  red_keyphrase_missing_in_h1.md  red_link_off_inventory.md  red_missing_alt.md  red_multiple_h1.md  red_no_h1.md  red_slug_mismatch.md
tests/fixtures/screaming_frog/: all_inlinks.csv  inlinks_legacy.csv  internal_html.csv  internal_legacy.csv  internal_minimal.csv
